refactor(budget): streamline save flow with DTO validation
Replaced manual flow building in BudgetCommand with FlowFactory and FlowUtil. Implemented jakarta.validation annotations in BudgetSaveDto and integrated ValidatorUtil for input validation. Updated Converter and NumberUtil to return null for invalid inputs, facilitating DTO validation. Standardized success messages using ShellHelper and fixed a REF_MONTH typo in FlowFactory.